Removed the z-indexes from the table and fixed a bug in the layout

--- a/packages/elements/bolt-table/src/table.scss
+++ b/packages/elements/bolt-table/src/table.scss
@@ -112,10 +112,6 @@
       td {
         background-color: var(--m-bolt-table-highlight);
       }
-
-      th {
-        z-index: 1;
-      }
     }
   }
 
@@ -182,7 +178,6 @@
   thead th {
     position: sticky;
     top: 1px;
-    z-index: 2;
     box-shadow: 0 0 0 1px var(--m-bolt-table-border);
   }
 
